Added PCY mulitstage and multihash versions