@@ -5,7 +5,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 public class Sampling {
-    private static final double percentageThreshold = 0.01;
+    private static final double percentageThreshold = 0.1;
     private static final double percentageThreshold2 = 0.02;
 
 
@@ -17,43 +17,46 @@ public class Sampling {
         // define I/O utility
 //        BufferedReader in = new BufferedReader(new FileReader("data/retail.dat"));
         BufferedReader in = new BufferedReader(new FileReader("data/netflix.data"));
-        //  BufferedWriter output = new BufferedWriter(new FileWriter("data/results.txt"));
 
 
-        int dataSize = 0;
+        List<String> rawData = new ArrayList<>();
+        String curLine;
+        while ((curLine = in.readLine()) != null) {
+            rawData.add(curLine);
+
+        }
+        int dataSize = rawData.size();
+
+
+        double percentage = 0.3;
+        double support = dataSize * percentageThreshold * percentage;
+
+        int numToSelect = (int) (dataSize * percentage);
+
+        Collections.shuffle(rawData);
+        List<String> selectedData = rawData.subList(0, numToSelect);
+
+
         Map<Integer, Integer> supportMap = new HashMap<>();
         Map<Long, Integer> supportMap2 = new HashMap<>();
-//        Set<Integer> uniqueItems;
-        String curLine;
-        // 1st pass, record the frequency of each item
-        while ((curLine = in.readLine()) != null) {
 
-            List<Integer> curBasket = Arrays.asList(curLine.split(" ")).stream()
+
+        for (String line : selectedData) {
+            List<Integer> curBasket = Arrays.asList(line.split(" ")).stream()
                     .map(Integer::valueOf).collect(Collectors.toList());
-
-            dataSize++;
-
             for (Integer item : curBasket) {
                 supportMap.merge(item, 1, Integer::sum);
             }
         }
 
-        int support = (int) (dataSize * percentageThreshold);
 
-        // filter out the items that are below threshold
         Map<Integer, Integer> freqItems = supportMap.entrySet().stream().filter(entry -> entry.getValue() >= support)
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
 
-        // 2nd pass
-//             in = new BufferedReader(new FileReader("data/retail.dat"));
-        in = new BufferedReader(new FileReader("data/netflix.data"));
-
-        while ((curLine = in.readLine()) != null) {
-            List<Integer> curBasket = Arrays.asList(curLine.split(" ")).stream()
-                    .map(Integer::valueOf).filter(freqItems::containsKey).collect(Collectors.toList());
-
-
+        for (String line : selectedData) {
+            List<Integer> curBasket = Arrays.stream(line.split(" "))
+                    .map(Integer::valueOf).filter(freqItems::containsKey).toList();
             for (Integer item1 : curBasket) {
                 for (Integer item2 : curBasket) {
                     if (item1 >= item2) continue;
@@ -70,7 +73,6 @@ public class Sampling {
         Map<Long, Integer> freqItems2 = supportMap2.entrySet().stream().filter(entry -> entry.getValue() >= support)
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
-        long finishTime = System.currentTimeMillis();
 
         System.out.println(freqItems.size());
         System.out.println(freqItems2.size());
@@ -83,6 +85,7 @@ public class Sampling {
         long key = ((long) x << 32) | y;
         return Long.valueOf(key);
     }
+
 
 }
 
